<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="415dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="76dp"
            android:layout_height="155dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/seven"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:background="#F6F0F0"
                android:text="@string/seven"
                android:textColor="#000000" />

            <Button
                android:id="@+id/eight"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/nine" />

            <Button
                android:id="@+id/button21"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/backspace" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/four" />

            <Button
                android:id="@+id/six"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/five" />

            <Button
                android:id="@+id/button24"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/six" />

            <Button
                android:id="@+id/divide"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/divide" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/one" />

            <Button
                android:id="@+id/two"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/two" />

            <Button
                android:id="@+id/three"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/three" />

            <Button
                android:id="@+id/multiple"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/multiple" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/zero"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/zero" />

            <Button
                android:id="@+id/comma"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/сomma" />

            <Button
                android:id="@+id/plus"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/plus" />

            <Button
                android:id="@+id/minus"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/minus" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button42"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button41"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button40"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/equal"
                style="@style/style1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1"
                android:text="@string/equal" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="181dp"
        android:autofillHints="false"
        android:inputType="none"
        android:text="@string/display"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAlignment="textEnd"
        tools:ignore="LabelFor" />

</androidx.constraintlayout.widget.ConstraintLayout>